# AG-RAC-COMPILE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  file_formats.md  ghidra_setup.md  memory_map.md
include/: ps2_math.h  types.h
pc/hal/dma/: dma.h
pc/hal/gs/: gs.c  gs.h
pc/hal/iop/: iop.c  iop.h
pc/hal/pad/: pad.c  pad.h
pc/hal/vu/: vu.h
pc/window/: window.c  window.h
src/engine/math/: math.c  math.h
tools/elf_info/: elf_info.py  requirements.txt
tools/iso_extract/: iso_extract.py  iso_extract_gui.py  iso_extract_gui.spec  list_iso.py  requirements.txt
tools/raw_extract/: raw_extract.py
tools/verify/: sha1_compare.py
